--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bg-gradient-to-br from-blue-100 to-purple-300 flex items-center justify-center min-h-screen">
   <div class="text-center">
-    <h1 class="text-4xl font-bold text-gray-800 mb-10">✨ Stylish Buttons ✨</h1>
+    <h1 class="text-4xl font-bold text-gray-800 mb-10">✨ OpenGYM ✨</h1>
     <div class="space-x-4">
       <button onclick="alert('Feedback Agent Activated!')"
         class="bg-gradient-to-r from-green-400 to-teal-500 text-white font-semibold py-3 px-6 rounded-full shadow-lg hover:scale-110 transition-transform">
