feedback agent completed for ckpt 1

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="text-center">
     <h1 class="text-4xl font-bold text-gray-800 mb-10">✨ OpenGYM ✨</h1>
     <div class="space-x-4">
-      <button onclick="alert('Feedback Agent Activated!')"
+      <button onclick="window.location.href='mlm.html'"
         class="bg-gradient-to-r from-green-400 to-teal-500 text-white font-semibold py-3 px-6 rounded-full shadow-lg hover:scale-110 transition-transform">
         Feedback Agent
       </button>
