--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         Feedback Agent
       </button>
 
-      <button onclick="alert('Planning Agent Activated!')"
+      <button onclick="window.location.href='planning.html'"
         class="bg-gradient-to-r from-pink-500 to-red-500 text-white font-semibold py-3 px-6 rounded-full shadow-lg hover:scale-110 transition-transform">
         Workout Builder / Planning Agent
       </button>
 
-      <button onclick="alert('Learning Agent Activated!')"
+      <button onclick="window.location.href='mlm.html#learning'"
         class="bg-gradient-to-r from-indigo-500 to-blue-500 text-white font-semibold py-3 px-6 rounded-full shadow-lg hover:scale-110 transition-transform">
         Learning Agent
       </button>
