--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         Workout Builder / Planning Agent
       </button>
 
-      <button onclick="window.location.href='mlm.html#learning'"
+      <button onclick="window.location.href='learning.html'"
         class="bg-gradient-to-r from-indigo-500 to-blue-500 text-white font-semibold py-3 px-6 rounded-full shadow-lg hover:scale-110 transition-transform">
         Learning Agent
       </button>
