--- a/learning.html
+++ b/learning.html
@@ -4,7 +4,20 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Learning Agent</title>
-<script src="https://cdn.tailwindcss.com"></script>
+<script src="https://cdn.tailwindcss.com">function showReplanButton() {
+  document.getElementById('replanContainer').classList.remove('hidden');
+}
+
+function goToWorkoutPlanner() {
+  // Get the challenge and emotion to pass to the workout planner
+  const challenge = document.getElementById('challenge').value;
+  const emotion = document.getElementById('emotion').value;
+  
+  // You can redirect to the workout planner page with query parameters
+  // This assumes your workout planner is at /workout-planner.html
+  window.location.href = '/planning.html'
+}
+</script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body class="bg-gradient-to-br from-purple-100 to-pink-200 flex items-center justify-center min-h-screen p-4">
@@ -57,6 +70,18 @@
   <!-- Loading indicator -->
   <div id="loadingIndicator" class="hidden mt-6 flex justify-center">
     <div class="animate-spin rounded-full h-10 w-10 border-b-2 border-indigo-600"></div>
+  </div>
+  
+  <!-- Replan button (hidden initially) -->
+  <div id="replanContainer" class="hidden mt-6 flex justify-center">
+    <button 
+      id="replanButton" 
+      class="bg-gradient-to-r from-purple-600 to-indigo-600 text-white font-semibold py-3 px-6 rounded-lg shadow-md hover:shadow-lg transition transform hover:scale-[1.02] focus:outline-none flex items-center justify-center"
+      onclick="goToWorkoutPlanner()"
+    >
+      <i class="fas fa-dumbbell mr-2"></i>
+      Create New Workout Plan
+    </button>
   </div>
   
   <div id="suggestionsContainer" class="mt-6 space-y-4"></div>
