--- a/index.html
+++ b/index.html
@@ -23,15 +23,27 @@
    Learning Agent
   </button>
 </div>
-<div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-  <button onclick="window.location.href='demo.html'"
+<div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-10">
+  <button onclick="window.location.href='Fine-tuning Dataset.html'"
   class="bg-gradient-to-r from-yellow-400 to-orange-500 text-white font-semibold py-3 px-6 rounded-full shadow-lg hover:scale-110 transition-transform">
-   Demo
+   Fine-tuning Dataset
   </button>
   <button onclick="window.location.href='agent.html'"
   class="bg-gradient-to-r from-purple-500 to-violet-500 text-white font-semibold py-3 px-6 rounded-full shadow-lg hover:scale-110 transition-transform">
    Full OpenGYM Agent
   </button>
+</div>
+
+<!-- Video Section -->
+<div class="mt-8 bg-white p-6 rounded-xl shadow-lg w-full max-w-3xl mx-auto">
+  <h2 class="text-2xl font-bold text-gray-700 mb-4">Featured Video</h2>
+  <div class="aspect-w-16 aspect-h-9">
+    <video class="w-full rounded-lg shadow" controls>
+      <source src="your-video-file.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+  </div>
+  <p class="mt-3 text-sm text-gray-600">OpenGYM demonstration video. Replace with your actual video content.</p>
 </div>
 </div>
 </body>
