integrate feedback and learning memory

--- a/agent.html
+++ b/agent.html
@@ -430,7 +430,7 @@
               </div>
               <div class="bg-gray-50 p-2 rounded text-center">
                 <div class="text-sm text-gray-500">Reps</div>
-                <div class="font-bold text-lg">${exercise.reptition || '-'}</div>
+                <div class="font-bold text-lg">${exercise.repetition || '-'}</div>
               </div>
               <div class="bg-gray-50 p-2 rounded text-center">
                 <div class="text-sm text-gray-500">Rest</div>
