--- a/agent.html
+++ b/agent.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>OpenGYM Agent</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     .step-card {
@@ -517,7 +518,7 @@
           const feedbackResult = document.getElementById('feedbackResult');
           const feedbackContent = document.getElementById('feedbackContent');
           
-          feedbackContent.textContent = data.feedback;
+          feedbackContent.innerHTML = marked.parse(data.feedback);
           feedbackResult.classList.remove('hidden');
           
           // Show next step button
