--- a/mlm.html
+++ b/mlm.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Gym Posture Analyzer</title>
-  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -12,7 +11,6 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
-      margin: 0;
     }
 
     .upload-box {
@@ -22,13 +20,11 @@
       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.08);
       text-align: center;
       width: 500px;
-      animation: fadeIn 0.5s ease-in-out;
     }
 
     h1 {
       font-size: 24px;
       margin-bottom: 20px;
-      color: #2c3e50;
     }
 
     input[type="file"] {
@@ -36,7 +32,36 @@
       border: 2px dashed #ccc;
       border-radius: 10px;
       width: 100%;
-      margin-bottom: 20px;
+      margin-bottom: 10px;
+    }
+
+    #fileSizeDisplay {
+      margin-bottom: 10px;
+      font-size: 14px;
+      color: #555;
+    }
+
+    #videoPreview {
+      display: none;
+      margin-top: 10px;
+      max-width: 100%;
+      max-height: 300px;
+      border-radius: 10px;
+    }
+
+    .spinner {
+      margin: 20px auto 0;
+      border: 6px solid #f3f3f3;
+      border-top: 6px solid #3498db;
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      animation: spin 1s linear infinite;
+    }
+
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
     }
 
     button {
@@ -53,88 +78,62 @@
     button:hover {
       background-color: #2980b9;
     }
-
-    #result-container {
-      margin-top: 25px;
-      max-height: 300px;
-      overflow-y: auto;
-      background-color: #f0f4f8;
-      border-radius: 8px;
-      padding: 15px;
-      font-size: 14px;
-      color: #2d3436;
-      text-align: left;
-      display: none;
-      animation: fadeIn 0.5s ease-in-out;
-    }
-
-    .spinner {
-      margin-top: 20px;
-      border: 6px solid #f3f3f3;
-      border-top: 6px solid #3498db;
-      border-radius: 50%;
-      width: 40px;
-      height: 40px;
-      animation: spin 1s linear infinite;
-      display: none;
-      margin-left: auto;
-      margin-right: auto;
-    }
-    #videoPreview {
-      display: none;
-      margin-top: 20px;
-      border-radius: 10px;
-      max-width: 100%;
-      max-height: 300px;
-      width: auto;
-      height: auto;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    }
-
-    @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
   </style>
 </head>
 <body>
+  
   <div class="upload-box">
+    <button onclick="window.location.href='index.html'" style="margin-top: 20px; background-color: #7f8c8d;">← Back to Home</button>
     <h1>Upload Your Gym Video</h1>
     <input type="file" id="videoInput" accept="video/mp4" onchange="previewVideo()" />
-    <video id="videoPreview" width="100%" controls style="display: none; margin-top: 20px; border-radius: 10px;"></video>
-
-    <br />
+    <div id="fileSizeDisplay"></div>
+    <video id="videoPreview" controls></video>
+    <br /><br />
     <button onclick="uploadVideo()">Analyze Posture</button>
-
-    <div class="spinner" id="loadingSpinner"></div>
-
-    <div id="result-container">
-      <div id="result"></div>
-    </div>
+    <div class="spinner" id="loadingSpinner" style="display: none;"></div>
   </div>
+  
 
   <script>
-    async function uploadVideo() {
-      const fileInput = document.getElementById('videoInput');
-      const resultBox = document.getElementById('result-container');
-      const result = document.getElementById('result');
-      const spinner = document.getElementById('loadingSpinner');
+    const MAX_FILE_SIZE_MB = 20;
 
-      if (!fileInput.files.length) {
-        alert("Please select a video file first.");
+    function previewVideo() {
+      const input = document.getElementById('videoInput');
+      const preview = document.getElementById('videoPreview');
+      const fileSizeDisplay = document.getElementById('fileSizeDisplay');
+      const file = input.files[0];
+
+      if (!file) return;
+
+      const sizeMB = (file.size / (1024 * 1024)).toFixed(2);
+      fileSizeDisplay.textContent = `📦 File size: ${sizeMB} MB`;
+
+      if (file.size > MAX_FILE_SIZE_MB * 1024 * 1024) {
+        alert(`❌ File too large! Please select a video under ${MAX_FILE_SIZE_MB} MB.`);
+        input.value = "";
+        preview.style.display = "none";
+        fileSizeDisplay.textContent = "";
         return;
       }
 
-      resultBox.style.display = 'none';
-      spinner.style.display = 'block';
+      preview.src = URL.createObjectURL(file);
+      preview.style.display = "block";
+    }
+
+    async function uploadVideo() {
+      const input = document.getElementById('videoInput');
+      const file = input.files[0];
+      const spinner = document.getElementById('loadingSpinner');
+
+      if (!file) {
+        alert("Please select a video file.");
+        return;
+      }
 
       const formData = new FormData();
-      formData.append("video", fileInput.files[0]);
+      formData.append("video", file);
+
+      spinner.style.display = "block"; // Show spinner
 
       try {
         const res = await fetch("http://127.0.0.1:5000/analyze", {
@@ -144,30 +143,17 @@
 
         const data = await res.json();
 
-        result.innerHTML = marked.parse(data.feedback || data.error || "No feedback received.");
-        resultBox.style.display = 'block';
+        localStorage.setItem("analysisFeedback", data.feedback || "No feedback returned.");
+        window.location.href = "feedback.html";
 
       } catch (err) {
-        result.innerHTML = "❌ Error contacting server.";
-        resultBox.style.display = 'block';
+        alert("❌ Error contacting server.");
+        console.error(err);
       } finally {
-        spinner.style.display = 'none';
+        spinner.style.display = "none"; // Hide spinner
       }
     }
-    function previewVideo() {
-      const fileInput = document.getElementById('videoInput');
-      const preview = document.getElementById('videoPreview');
-      const file = fileInput.files[0];
-  
-      if (file && file.type.startsWith('video/')) {
-        const url = URL.createObjectURL(file);
-        preview.src = url;
-        preview.style.display = 'block';
-      } else {
-        preview.src = '';
-        preview.style.display = 'none';
-      }
-    }
+
   </script>
 </body>
 </html>
