--- a/mlm.html
+++ b/mlm.html
@@ -6,7 +6,7 @@
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background-color: #f5f8fb;
+      background:  linear-gradient(to bottom right, #a8edea, #fed6e3);
       display: flex;
       justify-content: center;
       align-items: center;
