--- a/index.html
+++ b/index.html
@@ -38,12 +38,14 @@
 <div class="mt-8 bg-white p-6 rounded-xl shadow-lg w-full max-w-3xl mx-auto">
   <h2 class="text-2xl font-bold text-gray-700 mb-4">Featured Video</h2>
   <div class="aspect-w-16 aspect-h-9">
-    <video class="w-full rounded-lg shadow" controls>
-      <source src="your-video-file.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
+    <iframe class="w-full rounded-lg shadow"
+        src="https://www.youtube.com/embed/_wFwj7yoBOw"
+        title="OpenGYM Demo"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
   </div>
-  <p class="mt-3 text-sm text-gray-600">OpenGYM demonstration video. Replace with your actual video content.</p>
+  <p class="mt-3 text-sm text-gray-600">OpenGYM demonstration video.</p>
 </div>
 </div>
 </body>
