--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 <!-- Video Section -->
 <div class="mt-8 bg-white p-6 rounded-xl shadow-lg w-full max-w-3xl mx-auto">
   <h2 class="text-2xl font-bold text-gray-700 mb-4">Featured Video</h2>
-  <div class="aspect-w-16 aspect-h-9">
-    <iframe class="w-full rounded-lg shadow"
+  <div class="aspect-w-16 aspect-h-9" style="height: 400px;">
+    <iframe class="w-full h-full rounded-lg shadow"
         src="https://www.youtube.com/embed/_wFwj7yoBOw"
         title="OpenGYM Demo"
         frameborder="0"
