--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </button>
 </div>
 <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-10">
-  <button onclick="window.location.href='Fine-tuning Dataset.html'"
+  <button onclick="window.location.href='https://github.com/BerkOpenGYM/website/blob/main/fine-tuning/dataset.jsonl'"
   class="bg-gradient-to-r from-yellow-400 to-orange-500 text-white font-semibold py-3 px-6 rounded-full shadow-lg hover:scale-110 transition-transform">
    Fine-tuning Dataset
   </button>
